--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,45 +1,232 @@
 $mortgage-calculator-bg-color: #f7f7f7;
+$mortgage-calculator-border-color: #ccc;
+$mortgage-calculator-color-white: #ffffff;
 $mortgage-calculator-border-radius: 8px;
 $mortgage-calculator-button-bg-color: #007BFF;
 
+@font-face {
+    font-family: 'Mont Extra Light';
+    src: url('./fonts/Mont-ExtraLight.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Mont Heavy';
+    src: url('./fonts/Mont-Heavy.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+$desktop-breakpoint: 992px;
+
+@mixin respond-to-mobile {
+    @media (max-width: ($desktop-breakpoint - 1)) {
+        @content;
+    }
+}
+
+@mixin respond-to-desktop {
+    @media (min-width: $desktop-breakpoint) {
+        @content;
+    }
+}
+
 .mortgage-calculator {
-    font-family: Arial, sans-serif;
-    max-width: 400px;
-    padding: 20px;
-    background-color: $mortgage-calculator-bg-color;
-    border-radius: $mortgage-calculator-border-radius;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: fit-content;
+    margin: auto;
 
-    label {
-        display: block;
-        margin-bottom: 10px;
-    }
+    .section-heading {
+        font-family: 'Mont Extra Light', sans-serif;
+        font-size: 56px;
+        font-weight: 600;
+        line-height: 74px;
+        text-align: center;
+        padding-bottom: 2rem;
 
-    input,
-    select {
-        width: 100%;
-        padding: 8px;
-        margin: 5px 0;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-    }
+        span {
+            font-family: 'Mont Heavy', sans-serif;
+            font-weight: 800;
+        }
 
-    button {
-        padding: 10px;
-        width: 100%;
-        background-color: $mortgage-calculator-button-bg-color;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-
-        &:hover {
-            background-color: adjust($mortgage-calculator-button-bg-color, -10%);
+        @include respond-to-mobile {
+            font-size: 42px;
+            line-height: 50px;
+            padding-bottom: 0;
         }
     }
 
-    #payment-result {
-        margin-top: 20px;
-        font-weight: bold;
+    .calculator-fields {
+        position: relative;
+        background-color: $mortgage-calculator-color-white;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+        @include respond-to-mobile {
+            background: unset;
+            box-shadow: unset;
+        }
+
+        .mortgage-amount-wrapper {
+            display: grid;
+            grid-template-columns: auto;
+            justify-content: center;
+            align-items: center;
+            padding-top: 3rem;
+
+            @include respond-to-mobile {
+                grid-template-columns: 1fr;
+                padding: 3rem 1rem 0 1rem;
+            }
+        }
+
+        .rate-amortization-period-wrapper {
+            display: grid;
+            grid-template-columns: repeat(3, auto);
+            justify-content: center;
+            align-items: center;
+            grid-gap: 1rem;
+            padding: 2rem 0 6rem 0;
+
+            @include respond-to-mobile {
+                grid-template-columns: 1fr;
+                padding: 1rem;
+            }
+        }
+
+        .calculator-floating-label-field {
+            position: relative;
+
+            label {
+                font-family: 'Mont Extra Light', sans-serif;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 20px;
+                background-color: $mortgage-calculator-color-white;
+
+                position: absolute;
+                top: -0.75rem;
+                left: 1rem;
+                padding: 0.25rem 0.5rem;
+            }
+
+            input,
+            select {
+                font-family: 'Mont Heavy', sans-serif;
+                font-size: 22px;
+                font-weight: 800;
+                line-height: 30px;
+                max-width: 250px;
+                border-radius: 4px;
+                border: 1px solid $mortgage-calculator-border-color;
+                padding: 1rem;
+
+                @include respond-to-mobile {
+                    max-width: unset;
+                    width: -webkit-fill-available;
+                }
+            }
+
+            select {
+                padding: 1.3rem;
+            }
+        }
+
+        .calculator-fixed-label-field {
+            display: grid;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 0.5rem 1rem;
+
+            label {
+                font-family: 'Mont Extra Light', sans-serif;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 14px;
+                background-color: $mortgage-calculator-color-white;
+
+                padding: 0.25rem 0;
+            }
+
+            input,
+            select {
+                font-family: 'Mont Heavy', sans-serif;
+                font-size: 22px;
+                font-weight: 800;
+                line-height: 22px;
+                max-width: 250px;
+
+                padding: 0;
+                border: none;
+                outline: none;
+                box-shadow: none;
+
+                @include respond-to-mobile {
+                    max-width: unset;
+                    width: -webkit-fill-available;
+                }
+
+                &:focus {
+                    border: none;
+                    outline: none;
+                    box-shadow: none;
+                }
+            }
+
+            select {
+                padding: 0.2rem 0;
+            }
+        }
+
+        .masked-input {
+            display: grid;
+            grid-template-columns: repeat(2, auto);
+            align-items: center;
+        }
+
+        .apply-wrapper {
+            display: grid;
+            grid-template-columns: repeat(2, 250px);
+            justify-items: center;
+            align-items: center;
+            grid-gap: 0.5rem;
+            background: #1A1A30;
+            border-radius: 30px;
+
+            position: absolute;
+            bottom: -4rem;
+            left: 10rem;
+            padding: 2rem;
+
+            @include respond-to-mobile {
+                position: unset;
+                grid-template-columns: auto;
+                padding: 1rem;
+                margin: 1rem;
+            }
+
+
+            #mortagage-payment {
+                font-family: 'Mont Extra Light', sans-serif;
+                font-size: 42px;
+                font-weight: 700;
+                line-height: 56px;
+                color: $mortgage-calculator-color-white;
+            }
+
+            button {
+                font-family: 'Mont Extra Light', sans-serif;
+                font-size: 20px;
+                font-weight: 800;
+                line-height: 27px;
+                color: #1A1A30;
+                text-transform: uppercase;
+                background: $mortgage-calculator-color-white;
+                width: 200px;
+                border-radius: 2rem;
+                padding: 0.5rem;
+                border: none;
+                cursor: pointer;
+            }
+        }
     }
 }
