--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $mortgage-calculator-color-white: #ffffff;
 $mortgage-calculator-border-radius: 8px;
 $mortgage-calculator-button-bg-color: #007BFF;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap');
 
 $desktop-breakpoint: 992px;
 
@@ -18,6 +18,10 @@ $desktop-breakpoint: 992px;
     @media (min-width: $desktop-breakpoint) {
         @content;
     }
+}
+
+body {
+    margin: 0;
 }
 
 .mortgage-calculator {
@@ -153,7 +157,7 @@ $desktop-breakpoint: 992px;
             }
 
             &.child-input-focused {
-                outline:2px solid rgb(0, 95, 204);
+                outline: 2px solid rgb(0, 95, 204);
                 outline-offset: -1px;
             }
         }
@@ -214,6 +218,166 @@ $desktop-breakpoint: 992px;
                     pointer-events: none;
                     cursor: none;
                 }
+            }
+        }
+    }
+}
+
+.market-trend-videos {
+    max-width: fit-content;
+    margin: auto;
+    font-family: "Poppins", serif;
+
+    .section-heading {
+        color: #000000;
+        text-align: center;
+        font-family: "DM Sans";
+        font-size: 50px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        padding-bottom: 4rem;
+
+        @include respond-to-mobile {
+            font-size: 42px;
+            line-height: 50px;
+            padding: 1rem;
+        }
+    }
+
+    .videos {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-gap: 2rem;
+        padding: 0 0 4rem 0;
+
+        height: calc(100vh - 250px);
+        overflow-y: auto;
+
+        @include respond-to-mobile {
+            grid-template-columns: 1fr;
+            justify-items: center;
+            height: calc(100vh - 100px);
+            padding: 0 1rem;
+        }
+
+        .video {
+            width: 350px;
+
+            @include respond-to-mobile {
+                width: 100%;
+            }
+
+            .thumbnail {
+                border-radius: 0.75rem;
+                background: #D9D9D9;
+                background-image: url('./assets/images/test-thumbnail.png');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                width: 350px;
+                height: 300px;
+
+                @include respond-to-mobile {
+                    width: 100%;
+                }
+
+                .thumbnail-overlay {
+                    width: 100%;
+                    height: 100%;
+                    background: #66656566;
+                    border-radius: 0.75rem;
+                    display: grid;
+                    align-items: center;
+                    justify-content: center;
+
+                    .play-icon {
+                        display: grid;
+                        background-color: #FFFFFF;
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        align-items: center;
+                        justify-content: center;
+                        cursor: pointer;
+                        transition: background-color 0.3s ease;
+
+                        &:hover {
+                            background-color: #bababa;
+                        }
+                    }
+                }
+            }
+
+            .date {
+                color: #5F758A;
+                font-family: "DM Sans";
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 30px;
+            }
+
+            .title {
+                color: #000000;
+                font-family: "DM Sans";
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 30px;
+            }
+        }
+    }
+}
+
+.modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .modal-content {
+        position: relative;
+        background-color: #FFFFFF;
+        // padding: 1rem;
+        border-radius: 0.25rem;
+        width: 50vw;
+        height: 50vh;
+
+        @include respond-to-mobile {
+            width: 90vw;
+            height: 90vh;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+
+        .close {
+            position: absolute;
+            top: -12px;
+            right: -12px;
+            font-size: 20px;
+            cursor: pointer;
+            color: #FFFFFF;
+            background-color: #989595;
+            width: 25px;
+            height: 25px;
+            text-align: center;
+            line-height: 25px;
+            border-radius: 50%;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+                background-color: #626060;
             }
         }
     }
