updates for image links

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -271,7 +271,7 @@ body {
             .thumbnail {
                 border-radius: 0.75rem;
                 background: #D9D9D9;
-                background-image: url('https://img.youtube.com/vi/22Cw_8tECyQ/sddefault.jpg');
+                // background-image: url('https://img.youtube.com/vi/22Cw_8tECyQ/sddefault.jpg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -549,7 +549,7 @@ body {
             .thumbnail {
                 border-radius: 0.75rem;
                 background: #D9D9D9;
-                background-image: url('https://img.youtube.com/vi/22Cw_8tECyQ/sddefault.jpg');
+                // background-image: url('https://img.youtube.com/vi/22Cw_8tECyQ/sddefault.jpg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
