--- a/src/styles.scss
+++ b/src/styles.scss
@@ -617,11 +617,11 @@ body {
 }
 
 .mortgage-news {
-    max-width: fit-content;
     margin: auto;
     font-family: "Poppins", serif;
 
     .section-heading {
+        width: 100%;
         color: #000000;
         text-align: center;
         font-family: "DM Sans";
@@ -630,6 +630,16 @@ body {
         font-weight: 600;
         line-height: normal;
         padding: 2rem 0;
+
+        &.sticky {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: white;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        
 
         @include respond-to-mobile {
             font-size: 26px;
@@ -644,7 +654,12 @@ body {
         grid-gap: 2rem;
         padding: 0 0 2rem 0;
 
+        width: fit-content;
+        margin: auto;
+
         @include respond-to-mobile {
+            width: 100vw;
+            margin: auto;
             grid-template-columns: 1fr;
             justify-items: center;
             padding: 0 1rem;
