--- a/src/styles.scss
+++ b/src/styles.scss
@@ -224,11 +224,11 @@ body {
 }
 
 .market-trend-videos {
-    max-width: fit-content;
     margin: auto;
     font-family: "Poppins", serif;
 
     .section-heading {
+        width: 100%;
         color: #000000;
         text-align: center;
         font-family: "DM Sans";
@@ -237,6 +237,14 @@ body {
         font-weight: 600;
         line-height: normal;
         padding: 2rem 0;
+
+        &.sticky {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: white;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
 
         @include respond-to-mobile {
             font-size: 26px;
@@ -251,13 +259,14 @@ body {
         grid-gap: 2rem;
         padding: 0 0 2rem 0;
 
-        height: calc(100vh - 200px);
-        overflow-y: auto;
+        width: fit-content;
+        margin: auto;
 
         @include respond-to-mobile {
+            width: 100vw;
+            margin: auto;
             grid-template-columns: 1fr;
             justify-items: center;
-            height: calc(100vh - 100px);
             padding: 0 1rem;
         }
 
@@ -647,8 +656,6 @@ body {
             background: white;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
-
-        
 
         @include respond-to-mobile {
             font-size: 26px;
