--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $mortgage-calculator-color-white: #ffffff;
 $mortgage-calculator-border-radius: 8px;
 $mortgage-calculator-button-bg-color: #007BFF;
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap');
 
 $desktop-breakpoint: 992px;
 
@@ -752,6 +752,166 @@ body {
                     display: grid;
                     justify-content: center;
                     align-items: center;
+                }
+            }
+        }
+    }
+}
+
+.mortgage-glossary {
+    margin: auto;
+    font-family: "Poppins", serif;
+
+    .header-wrapper {
+        @include respond-to-mobile {
+            width: fit-content;
+        }
+
+        &.sticky {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: white;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .section-heading {
+            color: #000000;
+            text-align: center;
+            font-family: "DM Sans";
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            padding: 2rem 0;
+
+            @include respond-to-mobile {
+                font-size: 26px;
+                font-weight: 700;
+                padding: 1rem;
+            }
+        }
+
+        .glossary-controls {
+            background: #5f758a;
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+            align-items: center;
+            grid-gap: 1rem;
+            justify-items: center;
+            padding: 0 2rem;
+
+            @include respond-to-mobile {
+                padding: 0;
+                width: fit-content;
+            }
+
+            .arrow-left,
+            .arrow-right {
+                display: grid;
+                background-color: #FFFFFF;
+                border-radius: .5rem;
+                transition: background-color 0.5s ease-in-out;
+                cursor: pointer;
+                margin: 2rem 0;
+
+                img {
+                    width: 45px;
+                }
+
+                &:hover {
+                    background-color: #d9d9d9;
+                }
+            }
+
+            .alphabets {
+                display: flex;
+                gap: 1rem;
+                width: calc(100vw - 300px);
+                overflow: auto;
+                padding: 2rem 0;
+
+                @include respond-to-mobile {
+                    width: calc(100vw - 90px);
+                }
+
+                .alphabet {
+                    color: #FFFFFF;
+                    text-align: center;
+                    font-family: Outfit;
+                    font-size: 30px;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: normal;
+                    cursor: pointer;
+                    border-radius: 52px;
+                    border: .675px solid hsla(0, 0%, 100%, .31);
+                    width: 45px;
+                    height: 70px;
+                    display: grid;
+                    align-items: center;
+                    justify-content: center;
+                    // background: rgba(255, 255, 255, 0.06);
+                    transition: all 0.25s ease-in-out;
+                    flex-shrink: 0;
+
+                    &:hover {
+                        background-color: #FFFFFF;
+                        color: #5f758a;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .glossary-list {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 850px;
+        padding-bottom: 1.5rem;
+        margin: auto;
+
+        @include respond-to-mobile {
+            width: 100vw;
+            padding: 0 1rem 1rem 1rem;
+        }
+
+        .glossary-item {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: .5rem;
+            padding-bottom: 1rem;
+
+            @include respond-to-mobile {
+                padding: 1rem 0;
+            }
+
+            .term {
+                color: #091621;
+                font-family: "DM Sans";
+                font-size: 36px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 40px;
+
+                @include respond-to-mobile {
+                    font-size: 20px;
+                    line-height: 28px;
+                }
+            }
+
+            .definition {
+                color: #091621;
+                font-family: "DM Sans";
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 27px;
+
+                @include respond-to-mobile {
+                    font-size: 18px;
+                    line-height: 22px;
                 }
             }
         }
