updates for educational videos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -223,7 +223,7 @@ body {
     }
 }
 
-.market-trend-videos {
+.market-trend-videos, .educational-videos {
     margin: auto;
     font-family: "Poppins", serif;
 
