--- a/src/styles.scss
+++ b/src/styles.scss
@@ -223,7 +223,8 @@ body {
     }
 }
 
-.market-trend-videos, .educational-videos {
+.market-trend-videos,
+.educational-videos {
     margin: auto;
     font-family: "Poppins", serif;
 
@@ -913,6 +914,156 @@ body {
                     font-size: 18px;
                     line-height: 22px;
                 }
+            }
+        }
+    }
+}
+
+.cockpit {
+    margin: auto;
+    font-family: "Poppins", serif;
+
+    .header-wrapper {
+        width: 1250px;
+        padding: 0 0 2rem 0;
+        background-color: #E7E7E7;
+        margin: 1rem auto;
+        border-radius: 1rem;
+
+        @include respond-to-mobile {
+            width: 100vw;
+        }
+
+        &.sticky {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            // background: white;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .tab-selectors {
+            display: grid;
+            grid-template-columns: repeat(4, auto);
+            align-items: center;
+            justify-content: center;
+            // grid-gap: 1rem;
+
+            @include respond-to-mobile {
+                display: flex;
+                width: 100vw;
+                overflow: auto;
+                justify-content: unset;
+            }
+
+            .tab-selector {
+                color: #000;
+                font-family: "DM Sans";
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 27px;
+                background-color: #E7E7E7;
+                transition: background-color 0.5s ease-in-out;
+                cursor: pointer;
+                padding: 1rem;
+                white-space: nowrap;
+
+                border-bottom-left-radius: 0.25rem;
+                border-bottom-right-radius: 0.25rem;
+
+                &:hover,
+                &.selected {
+                    background-color: #43434329;
+                }
+
+                @include respond-to-mobile {
+                    font-size: 14px;
+                    border-radius: 0;
+                }
+            }
+        }
+
+        .tab-content {
+            padding: 2rem 4rem;
+            display: none;
+
+            &.selected {
+                display: block;
+            }
+
+            @include respond-to-mobile {
+                padding: 1rem;
+            }
+
+            .title {
+                color: #000;
+                font-family: "DM Sans";
+                font-size: 46px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+
+                @include respond-to-mobile {
+                    font-size: 20px;
+                }
+            }
+
+            .description {
+                color: #000;
+                font-family: "DM Sans";
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 31px;
+
+                @include respond-to-mobile {
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 22px;
+                }
+            }
+        }
+    }
+
+    .stats {
+        width: 1250px;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        align-items: center;
+        justify-content: start;
+        grid-gap: 2rem;
+        margin: auto;
+        padding: 2rem 0;
+
+        @include respond-to-mobile {
+            grid-template-columns: 1fr;
+            width: calc(100vw - 2rem);
+            padding: 0 1rem;
+        }
+
+        .stat {
+            display: grid;
+            grid-gap: 1rem;
+
+            .title {
+                color: #181A1A;
+                font-family: "DM Sans";
+                font-size: 30px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+
+                @include respond-to-mobile {
+                    font-size: 18px;
+                    font-weight: 800;
+                }
+            }
+
+            .stat-graph {
+                border-radius: 1rem;
+                border: 1px solid rgba(0, 0, 0, 0.20);
+                overflow: hidden;
             }
         }
     }
