--- a/src/styles.scss
+++ b/src/styles.scss
@@ -475,7 +475,7 @@ body {
                 gap: 0.5rem;
 
                 .question {
-                    color: #000000;
+                    color: #181A1A;
                     font-family: "DM Sans";
                     font-size: 22px;
                     font-style: normal;
@@ -492,7 +492,7 @@ body {
                     font-family: "DM Sans";
                     font-size: 16px;
                     font-style: normal;
-                    font-weight: 600;
+                    font-weight: 500;
                     line-height: normal;
                     max-height: 0;
                     overflow: hidden;
@@ -506,8 +506,8 @@ body {
 
             .expand-collapse-wrapper {
                 background-color: #5F758A;
-                width: 42px;
-                height: 42px;
+                width: 32px;
+                height: 32px;
                 display: grid;
                 justify-content: center;
                 align-items: center;
