--- a/src/styles.scss
+++ b/src/styles.scss
@@ -614,7 +614,7 @@ body {
                 font-family: "DM Sans";
                 font-size: 16px;
                 font-style: normal;
-                font-weight: 700;
+                font-weight: 400;
                 line-height: 30px;
             }
 
@@ -640,8 +640,8 @@ body {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 -webkit-line-clamp: 2;
-                line-height: 1.5rem;
-                max-height: calc(2 * 1.5rem);
+                // line-height: 1.5rem;
+                // max-height: calc(2 * 1.5rem);
             }
 
             .read-more-link {
@@ -650,7 +650,7 @@ body {
                 background-color: #5f758a;
                 color: #fff;
                 text-align: center;
-                font-family: "Poppins", serif;
+                font-family: "DM Sans";
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 700;
